--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ body {
       background-color: #000;
       color: #fff;
       text-align: center;
+      text-shadow: #000;
       padding: 10px 0;
       font-size: 14px;
       z-index: 1;
