--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,18 @@ body {
     text-decoration: none;
   }
   
+  h1 {
+    background-color: #333;
+    color: #fff;
+    padding: 1em 0;
+    text-align: center;
+  }
+
+  h2 {
+    background-color: #333;
+    color: #fff;
+    padding: 1em 0;
+  }
   main {
     padding: 20px;
   }
@@ -138,7 +150,15 @@ body {
       background-color: #c7c7c7;      /* Lignes alternées */
   }
   
-
+#big_img_wide { 
+    width: 55%;   
+    height: auto;
+    display: block;
+    margin: auto;
+    background-color: rgb(13, 58, 58);
+    padding: 5%;  /* Pour voir la couleur autour de l'image */
+    border: 10% solid rgb(13, 58, 58);
+}
 
   #dayo {color: #200096; font-weight: bold; background-color: #a1c406;}/**/
   #daye {color: #200096; font-weight: bold; background-color: #e6bb46;}/**/
@@ -175,3 +195,43 @@ body {
       opacity: 0.5;
   }
 
+  /*#####################################################*/
+
+
+    /* Style du popup */
+    #popup {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgb(199, 199, 199);
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        text-align: center;
+        display: none; /* Caché par défaut */
+        z-index: 1000;
+    }
+
+    /* Fond assombri */
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color:  rgb(13, 58, 58);
+        display: none;
+        z-index: 999;
+        opacity: 0.89;
+    }
+
+    /* Bouton */
+    .popup-button {
+        background-color: #4690cc;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
